package app.model;

public class MonsterCard extends Card {

}
