package app.model;

public class SpellCard extends Card {

}
